--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                 <!-- TENTH EXAMPLE -->
                 <div class="view view-tenth slider-hill">
-                     <img src="images/my_images/angel.jpg" alt="slider image">
+                     <img src="images/angel.JPG" alt="Angel">
                     <div class="mask">
                         <h2>Atlantis (Excerpt from my poetry)</h2>
                         <p>If you notice the breathing silence,
