--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>I Make Websites</title>
+    <title>Vasilia Kouskoulas</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet"> 
@@ -96,7 +96,7 @@
                     <div class="slide-text" style="margin-top: 5%">
                         <h2 style="padding-bottom: 6%">I am
                         <span class="txt-rotate" data-period="2000" data-rotate='[ "Vasilia Kouskoulas", "a full-stack developer", "passionate about code", "a visual artist", "a database connoisseur", "a traveler", "an alien"]'></span></h2>
-                        <p> Driven, thinking out of the box individual with a strong knack for databases and front-end design. Excellent communicator with strong organizational skills setting deadlines and goals for her project team. Always working on projects that intruige me, challenge me, teach me and allow me to create whether that be database schemas or canvas animations.</p>
+                        <p> Driven, thinking out of the box Ruby on Rails enthusiast with a dexterity for databases and an eye for UX/Front-End Design. Superb communicator with robust organizational skills implementing strategic goals in regards to project management. Futurist visionary with a firm understanding of global markets and its needs as a result predicting unfolding trends.</p>
                         <p style="color:#9C5FAB;"><strong> Hint: Hover Over My Photo <img src="images/my_images/gold_arrow.png"  alt="Gold Arrow" width="100" style="margin-left: 3%"> </strong> </p>
                     </div>
 
@@ -222,7 +222,7 @@
                     </div>
                     <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                         <h2> Web-Development  <!-- <img src="images/my_images/geometry.jpg" alt="Sacred Geometry" id="geometry"> --> </h2>
-                        <p>Currently I'm applying those skills to creating fully functional, user friendly but also aethetically pleasing websites. My favorite stack is Ruby on Rails but I also know LAMP and MEAN. In addition, I possess an uncanny thirst for konwledge and I have a great knack for creating databases and playing with SQL statements. I find their logical progression so rhythmic. Finally, my previous position as a producer in many visual media projects has made me a meticulously organized person, which helps balance my chaotic rushes of creativity. </P>
+                        <p>As a developer I am applying those skills to designing fully functional, user friendly but also aethetically stunning websites. Though I adore Ruby on Rails, I am also well-acquainted with LAMP and MEAN. In addition, I possess an uncanny thirst for knowledge and love playing with SQL statements. I find their logical progression so rhythmic. Finally, my precending background as producer in many visual media projects has shaped me into a meticulously organized person, which balances my chaotic rushes of creativity and allows my visions to come into fruition. </P>
                     </div>
                 </div>
             </div>
