Added Live Preview Link to Obscura

--- a/portfolio-details-obscura.html
+++ b/portfolio-details-obscura.html
@@ -129,9 +129,9 @@
                                <li><a href="#"><i class="fa fa-check-square"></i>CodeIgniter</a></li>
                         </ul>
                     </div>
-                    <!-- <div class="live-preview">
-                        <a href="#" class="btn btn-common uppercase">Live preview</a>
-                    </div> -->
+                    <div class="live-preview">
+                        <a href="http://52.34.206.198/" class="btn btn-common uppercase">Live preview</a>
+                    </div>
                 </div>
             </div>
         </div>
