--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -133,9 +133,9 @@
                         </ul>
                     </div>
                   
-                   <!--  <div class="live-preview">
-                        <a href="#" class="btn btn-common uppercase">Live preview</a>
-                    </div> -->
+                    <div class="live-preview">
+                        <a href="http://52.34.206.198/" class="btn btn-common uppercase">Live preview</a>
+                    </div>
                 </div>
             </div>
         </div>
