--- a/portfolio-details-obscura.html
+++ b/portfolio-details-obscura.html
@@ -130,7 +130,7 @@
                         </ul>
                     </div>
                     <div class="live-preview">
-                        <a href="http://52.32.155.229/" class="btn btn-common uppercase">Live preview</a>
+                        <a href="http://52.32.155.229/" target="_blank" class="btn btn-common uppercase">Live preview</a>
                     </div>
                 </div>
             </div>
