Added Link to MixNinja Circle

--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
                                     <div class="ch-info-front ch-img-1"></div>
                                     <div class="ch-info-back">
                                         <h3>Ruby on Rails</h3>
-                                        <p>Project: MixNinja</p>
+                                        <p>Project: <a href="http://52.34.206.198/" target="_blank">MixNinja</a></p>
+                                        
                                     </div>
                                 </div>
                             </div>
