Added Link to Osbcura Hover Circle

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                     <div class="ch-info-front ch-img-3"></div>
                                     <div class="ch-info-back">
                                         <h3>LAMP</h3>
-                                        <p>Project: Obscura</p>
+                                        <p>Project: <a href="http://52.32.155.229/" target="_blank">Obscura</a></p>
                                     </div>
                                 </div>
                             </div>
