--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -222,7 +222,7 @@
                     <div class="contact-info bottom">
                         <h2>Contacts</h2>
                         <address style="font-size: 16px;">
-                        <img class="margin" src="images/my_images/mail.png" width="10%" alt="Mail"> E-mail: <a href="mailto:vaskous27@example.com">vaskous27@email.com</a> <br> 
+                        <img class="margin" src="images/my_images/mail.png" width="10%" alt="Mail"> E-mail: <a href="mailto:vaskous27@gmail.com">vaskous27@gmail.com</a> <br> 
                         <img class="margin" src="images/my_images/jeans_tele.png" width="10%" alt="Phone"> Phone: +1 (310) 709 5164 <br> 
                         <img class="margin" src="images/my_images/location.png" width="10%" alt="Phone">Location: Los Angeles, CA <br> 
                         </address>
