Updated "About Me" & "Skills"

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	    <script src="js/respond.min.js"></script>
     <![endif]-->     
 
-     <link  href="images/my_images/black.png">  
+     <link rel="icon" type="image/png"  href="images/my_images/black.png" />  
     <link sizes="144x144" href="images/my_images/black.png">
     <link sizes="114x114" href="images/my_images/black.png">
     <link sizes="72x72" href="images/my_images/black.png">
@@ -95,8 +95,9 @@
                 <div class="main-slider">
                     <div class="slide-text" style="margin-top: 5%">
                         <h2 style="padding-bottom: 6%">I am
-                        <span class="txt-rotate" data-period="2000" data-rotate='[ "Vasilia Kouskoulas", "a full-stack developer", "passionate about code", "a visual artist", "a database connoisseur", "a traveler", "an alien"]'></span></h2>
-                        <p> Driven, thinking out of the box Ruby on Rails enthusiast with a dexterity for databases and an eye for UX/Front-End Design. Superb communicator with robust organizational skills implementing strategic goals in regards to project management. Futurist visionary with a firm understanding of global markets and its needs as a result predicting unfolding trends.</p>
+                        <span class="txt-rotate" data-period="2000" data-rotate='[ "Vasilia Kouskoulas", "a UX/UI Designer", "passionate for code", "a visual artist", "a database connoisseur", "a traveler", "an alien"]'></span></h2>
+                        <p> Driven, thinking out of the box Ruby on Rails enthusiast with a dexterity for databases and a refined eye for UX/Front-End Design. Utilizing extensive research to create engaging platforms based on ideas and “feelings” the client/brand wants to convey, while at the same time creating feasible wireframes. Fully engaged in further developing expertise through hands on projects and working with equally passionate designers.</p>
+
                         <p style="color:#9C5FAB;"><strong> Hint: Hover Over My Photo <img src="images/my_images/gold_arrow.png"  alt="Gold Arrow" width="100" style="margin-left: 3%"> </strong> </p>
                     </div>
 
@@ -113,7 +114,7 @@
                         You'll experience a profound guidance,
                         Of the beauty found beneath,
                         Of all the hearts that together beat.</p>
-                            <a class="btn info btn-xl wow tada" href="https://drive.google.com/file/d/0BwXBcQcdrEHwOVQ2eGp3Ti1WUG8/view" target="_blank">Resume <i class="fa fa-file-text fa-1x wow bounceIn" style="color:#fff8e1"></i></a>
+                        <a class="btn info btn-xl wow tada" href="https://drive.google.com/file/d/0BwXBcQcdrEHwUVFESEc2ekdSdFE/view" target="_blank">Resume <i class="fa fa-file-text fa-1x wow bounceIn" style="color:#fff8e1"></i></a>
                     </div>
                 </div>
         
@@ -140,7 +141,7 @@
                         <h3>FULL-STACKS</h3>
                         <p>Ruby On Rails, MEAN & LAMP</p>
                          <h3>Languages</h3>
-                        <p>HTML, CSS, Javascript, Ruby, PHP, jQuery</p>
+                        <p>HTML5, CSS3, Javascript/AJAX, Ruby/TDD, PHP, jQuery</p>
                          <h3>Frameworks</h3>
                         <p>Express + Socket.io, Rails, CodeIgniter, Sinatra, Angular</p>
                     </div>
@@ -150,10 +151,12 @@
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="600ms">
                             <img src="images/my_images/egg.png" alt="">
                         </div>
-                          <h3>Databases</h3>
-                        <p>SQL(MySQL Workbench), Mongo DB, PostgreSQL/SQLite</p>
-                         <h3>Libraries</h3>
-                        <p>jQueryUI, Bootstrap/Sass, Materialize, Three.js, D3.js and many more</p>
+                        <h3>UX Skills:</h3>
+                        <p>Wireframes, Prototyping, Usability Testing, Information Architecture, Copywriting </p>
+                         <h3>UX Tools:</h3>
+                        <p>Balsamiq, Photoshop, Premiere, InVision, Proto.io, InDesign, Illustrator </p>
+                          <h3>Version Control</h3>
+                        <p>Git & Github</p>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
@@ -161,12 +164,13 @@
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="900ms">
                             <img src="images/my_images/flower_gold.gif" alt="">
                         </div>
+                        <h3>Libraries</h3> 
+                        <p>jQueryUI, Bootstrap/Sass, Materialize, Three.js, D3.js and many more</p>
+                        <h3>Databases</h3>
+                        <p>SQL(MySQL Workbench), Mongo DB, PostgreSQL/SQLite</p>
                         <h3>Deployment/Servers</h3>
                         <p>Ec2, Nginx, Passenger, MAMP/Apache, Node.js</p>
-                        <h3>Version Control</h3>
-                        <p>Git & Github</p>
-                         <h3>Other:</h3>
-                        <p>AJAX, Wireframes, TDD</p>
+                      
                     </div>
                 </div>
             </div>
@@ -204,7 +208,7 @@
                     </div>
                     <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                         <h2> Heritage and Education <!-- <img src="images/my_images/key.jpg" alt="Skeleton Key" id="key"> --></h2>
-                        <P>My story begins in Greece where I was born and raised but fate decided to take me away from my native land's golden shores to the urban landscape we call Los Angeles. The driving force behind this move was UCLA from which I graduated with an International Relations and Theatre degree. </P>
+                        <P>My story begins in Greece where I was born and raised but fate decided to take me away from my native land's golden shores to the urban landscape we call Los Angeles. The driving force behind this move was UCLA from which I graduated with an International Relations and Theatre degree. Between my degree and traveling the world, I have developed a keen eye for detecting rising global trends.</P>
                     </div>
                 </div>
                 <div class="single-features">
@@ -222,7 +226,7 @@
                     </div>
                     <div class="col-sm-6 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                         <h2> Web-Development  <!-- <img src="images/my_images/geometry.jpg" alt="Sacred Geometry" id="geometry"> --> </h2>
-                        <p>As a developer I am applying those skills to designing fully functional, user friendly but also aethetically stunning websites. Though I adore Ruby on Rails, I am also well-acquainted with LAMP and MEAN. In addition, I possess an uncanny thirst for knowledge and love playing with SQL statements. I find their logical progression so rhythmic. Finally, my precending background as producer in many visual media projects has shaped me into a meticulously organized person, which balances my chaotic rushes of creativity and allows my visions to come into fruition. </P>
+                        <p>As a UX Designer/UI Developer I am applying those skills to designing fully functional, user friendly but also aethetically stunning websites. Moreover, my precending background as producer in many visual media projects has shaped me into a meticulously organized person, which balances my chaotic rushes of creativity and allows my visions to come into fruition. When it comes to Back-End, though I adore Ruby on Rails, I am also well-acquainted with LAMP and MEAN. Finally, I possess an uncanny thirst for knowledge and love playing with SQL statements. I find their logical progression so rhythmic.  </P>
                     </div>
                 </div>
             </div>
