Updated "Technologies Used"

--- a/portfolio-details-obscura.html
+++ b/portfolio-details-obscura.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Portfolio Details | Service Ninja</title>
+    <title>Portfolio Details | Obscura</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/lightbox.css" rel="stylesheet"> 
@@ -115,13 +115,14 @@
                         <p>Obscure Musical Instruments E-Commerce Site. After my obsession with the Theremin and one of our team's exceptional Accordion skills, it was decided the world needed an online store, which would sell obscure instruments from all over the world. The site features categories from all ends of the planet with instruments like Didjeridus and Wheelharps.</p>
                         <ul class="elements">
                             <li><i class="fa fa-angle-right"></i> Built-On: PHP, CodeIgniter and MySQL.</li>
-                            <li><i class="fa fa-angle-right"></i> Tasks: Developed Concept, Project Manager, Created Database, Coded back-end and front-end.</li>
+                            <li><i class="fa fa-angle-right"></i> Tasks: Originated Concept, Project Management, Built Wireframes, Resized Images, Designed Schema and maintained Database, Programmed Front and Back End of Admin and Payment/Checkout Sections.</li>
                         </ul>
                     </div>
                     <div class="skills overflow">
-                        <h3>Skills:</h3>
+                        <h3>Technologies:</h3>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-check-square"></i>Design</a></li>
+                             <li><a href="#"><i class="fa fa-check-square"></i>Balsamiq</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Sketch</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>HTML/CSS</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>LAMP</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>MySQL</a></li>
