Wrote a More Extensive Description

--- a/portfolio-details-service.html
+++ b/portfolio-details-service.html
@@ -113,14 +113,16 @@
                         <h3>Project Info</h3>
                         <p>Business bartering for services. The Craigslist meets Burning Man of businesses. In this project we wanted to give startups an advantage by offering them a platform where they can exchange services for services instead of monetary exchange. After extensive research, we discovered there are no good platforms out there, which offer this, with only a few mostly allowing the exchange of just products and therefore found a demand in the market. A lot of new companies struggle with raising capital and therefore this would be a good alternative for getting the services they need to lift off the ground. It's all about helping each other grow.</p>
                         <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Built On: MEAN stack, MongoDB</li>
-                            <li><i class="fa fa-angle-right"></i> Tasks: Developed Concept, Created database, Project Manager, Designed Parts of front and back-end.</li>
+                            <li><i class="fa fa-angle-right"></i> Built On: Materialize, MEAN Stack, MongoDB</li>
+                            <li><i class="fa fa-angle-right"></i> Tasks: Developed Concept, Oversaw Operations, Created Wireframes, Engineered Profile, Message pages and Modals, Conducted Usability Tests, Designed Database.</li>
                         </ul>
                     </div>
                     <div class="skills overflow">
-                        <h3>Skills:</h3>
+                        <h3>Technologies:</h3>
                         <ul class="nav navbar-nav navbar-default">
-                            <li><a href="#"><i class="fa fa-check-square"></i>Design</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Balsamiq</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Usability Testing</a></li>
+                            <li><a href="#"><i class="fa fa-check-square"></i>Photoshop</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>HTML/CSS</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>MEAN</a></li>
                             <li><a href="#"><i class="fa fa-check-square"></i>Javascript</a></li>
