--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	    <script src="js/respond.min.js"></script>
     <![endif]-->     
 
-     <link rel="icon" type="image/png"  href="images/my_images/black.png" />  
-    <link sizes="144x144" href="images/my_images/black.png">
-    <link sizes="114x114" href="images/my_images/black.png">
-    <link sizes="72x72" href="images/my_images/black.png">
+    <link rel="icon" type="image/png"  href="images/my_images/black.png" />  
+    <link sizes="144x144" href="images/my_images/black.png" />
+    <link sizes="114x114" href="images/my_images/black.png" />
+    <link sizes="72x72" href="images/my_images/black.png" />
 
     
     <!-- Hover Photo Effect -->
