--- a/portfolio-details-service.html
+++ b/portfolio-details-service.html
@@ -19,7 +19,7 @@
 	    <script src="js/respond.min.js"></script>
     <![endif]-->       
 
-   <link  href="images/my_images/black.png">  
+    <link rel="icon" type="image/png"  href="images/my_images/black.png" />    
     <link sizes="144x144" href="images/my_images/black.png">
     <link sizes="114x114" href="images/my_images/black.png">
     <link sizes="72x72" href="images/my_images/black.png">
