--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="slide-text" style="margin-top: 5%">
                         <h2 style="padding-bottom: 6%">I am
                         <span class="txt-rotate" data-period="2000" data-rotate='[ "Vasilia Kouskoulas", "a UX/UI Designer", "passionate for code", "a visual artist", "a database connoisseur", "a traveler", "an alien"]'></span></h2>
-                        <p> Driven, thinking out of the box Ruby on Rails enthusiast with a dexterity for databases and a refined eye for UX/Front-End Design. Utilizing extensive research to create engaging platforms based on ideas and “feelings” the client/brand wants to convey, while at the same time creating feasible wireframes. Fully engaged in further developing expertise through hands on projects and working with equally passionate designers.</p>
+                        <p> Driven, thinking out of the box User Experience Creator with a proficiency in coding and a refined eye for UI Design. Utilizing extensive research to create engaging platforms based on ideas and “feelings” the client/brand wants to convey, while at the same time prototyping feasible and user-centered wireframes. Extremely agile and innovative problem-solver, placing effective communication at the forefront of any interaction. </p>
 
                         <p style="color:#9C5FAB;"><strong> Hint: Hover Over My Photo <img src="images/my_images/gold_arrow.png"  alt="Gold Arrow" width="100" style="margin-left: 3%"> </strong> </p>
                     </div>
