--- a/index.html
+++ b/index.html
@@ -138,12 +138,10 @@
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="300ms">
                             <img src="images/my_images/merkaba.png" alt="">
                         </div>
-                        <h3>FULL-STACKS</h3>
-                        <p>Ruby On Rails, MEAN & LAMP</p>
                          <h3>Languages</h3>
-                        <p>HTML5, CSS3, Javascript/AJAX, Ruby/TDD, PHP, jQuery</p>
+                        <p>HTML5, CSS3, Javascript/AJAX (NODE), Ruby/TDD, jQuery</p>
                          <h3>Frameworks</h3>
-                        <p>Express + Socket.io, Rails, CodeIgniter, Sinatra, Angular</p>
+                        <p>Express + Socket.io, Rails, CodeIgniter, Sinatra, Angular, Wordpress, Loopback</p>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
@@ -154,9 +152,7 @@
                         <h3>UX Skills:</h3>
                         <p>Wireframes, Prototyping, Usability Testing, Information Architecture, Copywriting </p>
                          <h3>UX Tools:</h3>
-                        <p>Balsamiq, Photoshop, Premiere, InVision, Proto.io, InDesign, Illustrator </p>
-                          <h3>Version Control</h3>
-                        <p>Git & Github</p>
+                        <p>Balsamiq, Sketch, Photoshop, InVision, Proto.io, Illustrator </p>  
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
@@ -165,12 +161,9 @@
                             <img src="images/my_images/flower_gold.gif" alt="">
                         </div>
                         <h3>Libraries</h3> 
-                        <p>jQueryUI, Bootstrap/Sass, Materialize, Three.js, D3.js and many more</p>
+                        <p>jQueryUI, Bootstrap/Sass, Materialize and many more</p>
                         <h3>Databases</h3>
                         <p>SQL(MySQL Workbench), Mongo DB, PostgreSQL/SQLite</p>
-                        <h3>Deployment/Servers</h3>
-                        <p>Ec2, Nginx, Passenger, MAMP/Apache, Node.js</p>
-                      
                     </div>
                 </div>
             </div>
