--- a/portfolio-details-obscura.html
+++ b/portfolio-details-obscura.html
@@ -130,9 +130,9 @@
                                <li><a href="#"><i class="fa fa-check-square"></i>CodeIgniter</a></li>
                         </ul>
                     </div>
-                    <div class="live-preview">
+<!--                     <div class="live-preview">
                         <a href="http://52.32.155.229/" target="_blank" class="btn btn-common uppercase">Live preview</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
