--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -141,9 +141,9 @@
                         </ul>
                     </div>
                   
-                    <div class="live-preview">
+<!--                     <div class="live-preview">
                         <a href="http://52.34.206.198/" target="_blank" class="btn btn-common uppercase">Live preview</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
