--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         You'll experience a profound guidance,
                         Of the beauty found beneath,
                         Of all the hearts that together beat.</p>
-                        <a class="btn info btn-xl wow tada" href="https://drive.google.com/file/d/0BwXBcQcdrEHwUVFESEc2ekdSdFE/view" target="_blank">Resume <i class="fa fa-file-text fa-1x wow bounceIn" style="color:#fff8e1"></i></a>
+                        <a class="btn info btn-xl wow tada" href="https://drive.google.com/file/d/0BwXBcQcdrEHwTXllLTJoaGpGWlk/view?usp=sharing" target="_blank">Resume <i class="fa fa-file-text fa-1x wow bounceIn" style="color:#fff8e1"></i></a>
                     </div>
                 </div>
         
