--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <div class="single-features">
                     <div class="col-sm-6 col-sm-offset-1 align-right wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
                         <h2>Previous Experience <!-- <img src="images/my_images/arrow.jpg" alt="Arrow" id="arrow"> --></h2>
-                        <p>However, in my subsequent years, I spent most of my time here conceiving and being part of fantastic worlds for the big screen. The psyche of my fictional characters led me to realm of psychology, which is why I also graduated from the Hypnosis Motivation Institute and became a practicing Hypnotherapist. </P>
+                        <p>However, in my subsequent years, I spent most of my time here conceiving and being part of fantastic worlds for the big screen. The psyche of my fictional characters led me to the realm of psychology, which is why I also graduated from the Hypnosis Motivation Institute and became a practicing Hypnotherapist. </P>
                     </div>
                     <div class="col-sm-5 wow fadeInRight" data-wow-duration="500ms" data-wow-delay="300ms">
                         <img src="images/my_images/girls.png" class="img-responsive" alt="Chibi Witches">
